# batch-62

./: README.md  README.mdgit  pyproject.toml
Assignment/week_10/: index.py
Assignment/week_2/: calculator.py  index.py
Assignment/week_3/: index.ipynb
Assignment/week_5/: index.py
Assignment/week_7/: database.py  game.py  index1.py
learn_python/: class14.ipynb
learn_python/python-lectures/: class.py  class10.ipynb  class11.ipynb  class12.ipynb  class13.ipynb  class14.ipynb  class16.ipynb  class17.ipynb  class19.ipynb  class2.ipynb  class3.ipynb  class4.ipynb  class5.ipynb  class6.ipynb  class7.ipynb  class8.ipynb  class9.ipynb  indexpy
learn_python/python-lectures/CLASS18/: class18.ipynb  students.csv
learn_python/python-lectures/class12/: abc1.txt  class12.ipynb  info.csv
learn_python/python-lectures/class15/: class15.ipynb
learn_python/python-lectures/class15/PIAIC/: genai.py
practice/: class.py
projects/: advanced.ipynb  basics.ipynb
